--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,2 @@
 PORT=4000
-DB_URL=mongodb+srv://anuragk0424:anurag123@cluster0.yqbmqdj.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+DB_URL=mongodb+srv://anuragk0424:axxxxgxxx@cluster0.yqbmqdj.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
